# right-start-tools

./: .gitignore  README.md  clean_terraform_init.zsh  tfbg.sh
.github/workflows/: code-guru.yml
right-start-tools/: pyproject.toml
right-start-tools/generate_sso_profiles_config/: README.md  generate_sso_profiles_config.py
right-start-tools/right_start_tools/: __init__.py  aws-config.ipynb  aws.py  backend.ipynb  backend.py  cli.py  constants.py  cross_account_vpc_tagger.py  del_vpc.ipynb  enroll.py  gen.ipynb  main.py  playground.ipynb  show.py  tools.py  vpc.py
right-start-tools/tag_vpc/: README.MD  create_tags.py  get_tags.py
