[tool.poetry]
name = "right-start-tools"
version = "0.1.0"
description = ""
authors = ["Eremin <haru.eaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.64"
boto3-stubs = {extras = ["organizations", "sts", "iam", "ec2"], version = "^1.34.64"}
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rst = "right_start_tools.cli:cli"

